--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc -p ."
+    "start": "NODE_PATH=./dist ts-node dist/app.js",
+    "start:watch": "nodemon",
+    "dev": "NODE_PATH=./src nodemon ts-node src/app.ts",
+    "build": "tsc -p .",
+    "watch": "babel src --out-dir lib --extensions '.ts,.tsx' --watch"
   },
   "keywords": [],
   "author": "",
@@ -19,14 +21,33 @@
     "puppeteer": "^2.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/register": "^7.9.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^13.11.1",
+    "@types/nodemon": "^1.19.0",
     "@types/puppeteer": "^2.0.1",
     "nodemon": "^2.0.3",
     "puppeteer-tsd": "0.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "exec": "npm start",
+    "ext": "ts"
   }
 }
