--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=./dist ts-node dist/app.js",
+    "start": "ts-node dist/app.js",
+    "crawl": "ts-node src/crawler/loca.crawler.ts",
     "start:watch": "nodemon",
-    "dev": "NODE_PATH=./src nodemon ts-node src/app.ts",
+    "dev": "nodemon --exec 'ts-node' src/app.ts",
     "build": "tsc -p .",
     "watch": "babel src --out-dir lib --extensions '.ts,.tsx' --watch"
   },
@@ -35,19 +36,7 @@
     "nodemon": "^2.0.3",
     "puppeteer-tsd": "0.0.2",
     "ts-node": "^8.8.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      ".git",
-      "node_modules"
-    ],
-    "watch": [
-      "src"
-    ],
-    "exec": "npm start",
-    "ext": "ts"
   }
 }
