--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@babel/register": "^7.9.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.150",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^13.11.1",
     "@types/nodemon": "^1.19.0",
     "@types/puppeteer": "^2.0.1",
+    "lodash": "^4.17.15",
     "nodemon": "^2.0.3",
     "puppeteer-tsd": "0.0.2",
     "ts-node": "^8.8.2",
